<resources>
    <string name="app_name">SportsMate</string>
    <string name="my_sports_profie">My Sports Profie</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="update">UPDATE</string>
    <string name="phone_number">Phone number</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">My Games</string>
    <string name="menu_slideshow">Create Games</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="find_game">Find Game</string>
    <string name="my_games">My Games</string>
    <string name="logout">Logout</string>
    <string name="title_activity_home_main">HomeMain</string>
    <string name="find_games">FIND GAMES</string>
    <string name="my_games_">MY GAMES</string>
    <string name="create_game">CREATE GAME</string>
</resources>
