<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.sportsmate.ui.findgames.FindGames"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_find_games" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.sportsmate.ui.mygames.MyGames"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_my_games" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.sportsmate.ui.creategame.CreateGame"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_create_game" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.sportsmate.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.sportsmate.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.sportsmate.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>